mergubah html ada yang salah

--- a/Java Script Exception (case)/studykasus.html
+++ b/Java Script Exception (case)/studykasus.html
@@ -16,6 +16,6 @@
 
     <button onclick="handleDivision()">Bagi Angka</button>
 
-    <script src="studykasus.js</script>
+    <script src="studykasus.js"></script>
 </body>
 </html>
